fix(skills): apply 2026-07-08 freshness sweep — 65 verified findings across 31 skills
Full-library research pass (one web-research agent per skill, 34 skills;
every high/medium finding independently adversarially verified against
primary sources) applied via one fix agent per skill, 75 edits total.

High-severity: SurrealDB 3.1.5 advisory batch (databases/08); Argo CD
repo-server unpatched gRPC RCE -> NetworkPolicies mandatory (devsecops/06);
ASP.NET Core Data Protection CVE-2026-40372 (dotnet/04); TorchServe
archived -> maintained serving runtimes (ml-engineering/05); Cilium mTLS
-> ztunnel integration (network-security/04); ingress-nginx EOL 2026-03-24
+ migration guidance (network-security/05, kubernetes/01); jqwik 1.10.0
protestware (testing/06). Plus 58 medium fixes (NIST 800-63B-4 password
floor, OCSP retirement, ATT&CK v18/v19, JDK 24 ZGC/pinning, K8s user-ns GA,
TS 7 GA, npm v12 defaults, Kyverno CVE-2026-4789, and more — see CHANGELOG).

Policies applied library-wide: rot-prone "current release is X.Y" claims
replaced with latest-stable-verify-via-web-search guidance (semantic
version boundaries kept); EOL tools replaced by maintained successors
(project-recommended, then CNCF).

Freshness model: per-file line-1 last-verified markers retired (39 removed)
in favor of a single root LAST-VERIFIED stamp (2026-07-08);
check-freshness.sh rewritten, freshness.yml/AGENTS.md/CONTRIBUTING/README
updated. CHANGELOG 1.5.0+1.6.0 archived to stay under the 500-line cap.
Also: 4 genericity leaks removed; README line-count surface 57k->58k.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>